; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/security/open_to_operation/extr_open_to_operation.c_check_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/security/open_to_operation/extr_open_to_operation.c_check_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"open\00", align 1
@O_ACCMODE = common dso_local global i32 0, align 4
@O_WRONLY = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"write failed\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"write succeeded\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64 (i32, i8*, i32)*, i8*, i32*, i32)* @check_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_write(i8* %0, i64 (i32, i8*, i32)* %1, i8* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64 (i32, i8*, i32)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8, align 1
  store i8* %0, i8** %6, align 8
  store i64 (i32, i8*, i32)* %1, i64 (i32, i8*, i32)** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %12, align 4
  br label %15

15:                                               ; preds = %84, %5
  %16 = load i32, i32* %12, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %87

19:                                               ; preds = %15
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* %12, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %13, align 4
  %25 = load i8*, i8** %8, align 8
  %26 = load i32, i32* %13, align 4
  %27 = call i32 @open(i8* %25, i32 %26)
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* %11, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %19
  %31 = load i8*, i8** %6, align 8
  %32 = load i32, i32* %13, align 4
  %33 = call i32 @notok_mode(i8* %31, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %32)
  br label %84

34:                                               ; preds = %19
  %35 = load i64 (i32, i8*, i32)*, i64 (i32, i8*, i32)** %7, align 8
  %36 = load i32, i32* %11, align 4
  %37 = call i64 %35(i32 %36, i8* %14, i32 1)
  %38 = icmp slt i64 %37, 0
  br i1 %38, label %39, label %60

39:                                               ; preds = %34
  %40 = load i32, i32* %13, align 4
  %41 = load i32, i32* @O_ACCMODE, align 4
  %42 = and i32 %40, %41
  %43 = load i32, i32* @O_WRONLY, align 4
  %44 = icmp eq i32 %42, %43
  br i1 %44, label %51, label %45

45:                                               ; preds = %39
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* @O_ACCMODE, align 4
  %48 = and i32 %46, %47
  %49 = load i32, i32* @O_RDWR, align 4
  %50 = icmp eq i32 %48, %49
  br i1 %50, label %51, label %55

51:                                               ; preds = %45, %39
  %52 = load i8*, i8** %6, align 8
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @notok_mode(i8* %52, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %53)
  br label %59

55:                                               ; preds = %45
  %56 = load i8*, i8** %6, align 8
  %57 = load i32, i32* %13, align 4
  %58 = call i32 @ok_mode(i8* %56, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %57)
  br label %59

59:                                               ; preds = %55, %51
  br label %81

60:                                               ; preds = %34
  %61 = load i32, i32* %13, align 4
  %62 = load i32, i32* @O_ACCMODE, align 4
  %63 = and i32 %61, %62
  %64 = load i32, i32* @O_WRONLY, align 4
  %65 = icmp eq i32 %63, %64
  br i1 %65, label %76, label %66

66:                                               ; preds = %60
  %67 = load i32, i32* %13, align 4
  %68 = load i32, i32* @O_ACCMODE, align 4
  %69 = and i32 %67, %68
  %70 = load i32, i32* @O_RDWR, align 4
  %71 = icmp eq i32 %69, %70
  br i1 %71, label %76, label %72

72:                                               ; preds = %66
  %73 = load i8*, i8** %6, align 8
  %74 = load i32, i32* %13, align 4
  %75 = call i32 @notok_mode(i8* %73, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 %74)
  br label %80

76:                                               ; preds = %66, %60
  %77 = load i8*, i8** %6, align 8
  %78 = load i32, i32* %13, align 4
  %79 = call i32 @ok_mode(i8* %77, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i32 %78)
  br label %80

80:                                               ; preds = %76, %72
  br label %81

81:                                               ; preds = %80, %59
  %82 = load i32, i32* %11, align 4
  %83 = call i32 @close(i32 %82)
  br label %84

84:                                               ; preds = %81, %30
  %85 = load i32, i32* %12, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %12, align 4
  br label %15

87:                                               ; preds = %15
  ret void
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @notok_mode(i8*, i8*, i32) #1

declare dso_local i32 @ok_mode(i8*, i8*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
